--- a/_config.yml
+++ b/_config.yml
@@ -1,29 +1,29 @@
-site: Gesko
-title: Gesko
-greetings: Hi 👋
+site: Sramazoth
+title: Sramazoth
+greetings: Mat an traoù ?
 description: >-
-  just a minimalist, personal blog
+  Random personnal blog
 lang: en-US
-timezone:  Europe/Rome
-repo: https://github.com/DavideBrie/Gesko # site repo [optional]
+timezone:  Europe/Paris
+repo: https://github.com/SuzuyaSora/sramazoth.github.io # site repo [optional]
 data-theme: dark # default theme "dark" | "light"
-discus-identifier: powex # replace with your disqus shortname
+discus-identifier: sramazoth # replace with your disqus shortname
 
 author:
-  name: gesko
-  bio: just a minimalist, personal blog
-  userpicture: 
-  username: # general username
-  github: # github username
-  twitter: # twitter username
-  email: your-email@email.com # email adress
+  name: sramazoth
+  bio: Cybersecurity & Scans
+  userpicture: https://github.com/SuzuyaSora/sramazoth.github.io/pang.jpg
+  username: sramazoth # general username
+  github: sramazoth # github username
+  twitter: sramazoth # twitter username
+  email: suzuya.sora@gmail.com # email adress
 
 # Font Settings
 googlewebfonts: family=Play:wght@400;700&family=Source+Code+Pro:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,300;1,400;1,500;1,600;1,700;1,900
 
 # URL settings
-url: "https://DavideBrie.github.io" # Domain Name of host. [username].github.io for github pages
-baseurl: "/Gesko" # sub folder for jekyll site. only if jekyll site not in root of host. leave blank if not wishd. always add / in front.
+url: "https://sramazoth.github.io" # Domain Name of host. [username].github.io for github pages
+baseurl: "/" # sub folder for jekyll site. only if jekyll site not in root of host. leave blank if not wishd. always add / in front.
 permalink: pretty
 
 # local
